--- a/README
+++ b/README
@@ -1,1 +1,11 @@
-The official repo is https://github.com/pinax/django-notification
+
+Many sites need to notify users when certain events have occurred and to allow
+configurable options as to how those notifications are to be received.
+
+The project aims to provide a Django app for this sort of functionality. This
+includes:
+
+ * submission of notification messages by other apps
+ * notification messages on signing in
+ * notification messages via email (configurable by user)
+ * notification messages via feed
